@@ -5,6 +5,7 @@ Mantis ChangeLog
  * Enh #1649: Replace 'Assign to Me' with 'Assign To:' and dropdown of developers.
  * Enh #3548: Support RSS for news syndication.
  * Enh #3552: Improved layout of Summary page and added 'Reporter / Resolution', 'Developer / Resolution' and 'Reporter Effectiveness' reports. (thanks to Lincoln Maskey)
+ * Enh #3564: In annonymous mode, login should remember the current page.
  * Fix #3077: Inconsistency: "Assigned To" versus "Handler".
  * Fix #3118: My Account: after update of password, wrong information is given.
  * Fix #3440: "Allowed File Types" is case sensitive (also applies to disallowed file types).
